methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:4: error: not found: value forwward
for (stepper <- 1 to 14) { forwward()}} 
                           ^