methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
for (stepper <- 1 to 14) {forward()}
left()
for (stepper <- 1 to 14) { forwward()}}